--- a/heybulldog/package.json
+++ b/heybulldog/package.json
@@ -14,6 +14,8 @@
     "react-scripts": "4.0.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
